trabajando con la carpeta UI los registros suplidores y Productos ya realizados

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,23 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+<StackPanel>
+            <Menu Height="25" FontSize="16">
+                <MenuItem Header="Registros">
+                    <MenuItem x:Name="rSuplidoresMenuItem" Header="Registro de Suplidores" Click="rSuplidoresButton_Click"></MenuItem>
+                    <MenuItem x:Name="rProductosMenuItem" Header="Registro de Productos" Click="rProductosButton_Click"></MenuItem>
+                    
 
+               
+
+                <MenuItem Header="Ayuda">
+                
+                </MenuItem>
+               <Menu/>
+                </MenuItem>
+
+            </Menu>
+            
+        </StackPanel>
     </Grid>
 </Window>
