--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registro_Detalle6"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="500" WindowStartupLocation="CenterScreen" Icon="/Imagenes/Rgi.png">
     <Grid>
         <StackPanel>
             <!--——————————————————————————————————————————————[ MENU ITEMS ]——————————————————————————————————————————————-->
@@ -24,5 +24,10 @@
                 </MenuItem>
             </Menu>
         </StackPanel>
+
+         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Image Source="/Imagenes/menu.png" Width="200"/>
+            <Label Content="Menu Principal" FontWeight="Bold" Height="50" FontSize="15" HorizontalAlignment="Center" />
+            </StackPanel>
     </Grid>
 </Window>
