--- a/UI/Registros/rPedidos.xaml
+++ b/UI/Registros/rPedidos.xaml
@@ -5,69 +5,79 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registro_Detalle6.UI.Registros"
         mc:Ignorable="d"
-        Title="Pedidos"   Height="470" Width="460" WindowStartupLocation="CenterScreen" >
+        Title=" Registrar Pedidos"   Height="600" Width="450" WindowStartupLocation="CenterScreen" Icon="/Imagenes/reg.png" >
     <Grid>
-       <StackPanel Orientation="Vertical" Margin="10">
-        <Label Content="Orden Id" FontWeight="Bold" FontSize="16"/>
-        <!--——————————————————————————————————————————————[ BUSCAR ]——————————————————————————————————————————————-->
-        <StackPanel Orientation="Horizontal" Height="35">
-            <TextBox x:Name="OrdenIdTextbox" Text="{Binding OrdenId}" Width="230" FontSize="18" FontWeight="Bold" VerticalContentAlignment="Center"/>
-    <Button x:Name="BuscarButton" Margin="50,0,0,0" Width="120" Click="BuscarButton_Click">
-        <StackPanel Orientation="Horizontal">
-            <Image Height="30" Source="/Imagenes/Buscar.png" />
-            <Label Content="Buscar" FontSize="17" FontWeight="Bold"/>
-        </StackPanel>
-    </Button>
-    </StackPanel>
-    <!--——————————————————————————————————————————————[ FECHA ]——————————————————————————————————————————————-->
-    <Label x:Name="Fecha" Content="Fecha" FontWeight="Bold"/>
-    <DatePicker x:Name="FechaTextBox" SelectedDate="{Binding Fecha}" Height="30" VerticalContentAlignment="Center"/>
-    <!--——————————————————————————————————————————————[ SuplidorId ]——————————————————————————————————————————————-->
-    <Label x:Name="SuplidorIdLabel" Content="SuplidorId" FontWeight="Bold"/>
-    <ComboBox x:Name="SuplidorIdComboBox" SelectedValue="{Binding SuplidorId}" Width="100" HorizontalAlignment="Left" Height="25"/>
+        <StackPanel Orientation="Vertical" Margin="10">
+            <Label Content="Orden Id" FontWeight="Bold" FontSize="16"/>
+            <!--——————————————————————————————————————————————[ BUSCAR ]——————————————————————————————————————————————-->
+            <StackPanel Orientation="Horizontal" Height="35">
+                <TextBox x:Name="OrdenIdTextbox" Text="{Binding OrdenId}" Width="230" FontSize="18" FontWeight="Bold" VerticalContentAlignment="Center"/>
+                <Button x:Name="BuscarButton" Margin="50,0,0,0" Width="120" Click="BuscarButton_Click">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Height="30" Source="/Imagenes/Buscar.png" />
+                        <Label Content="Buscar" FontSize="17" FontWeight="Bold"/>
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+            <!--——————————————————————————————————————————————[ FECHA ]——————————————————————————————————————————————-->
+            <Label x:Name="Fecha" Content="Fecha" FontWeight="Bold"/>
+            <DatePicker x:Name="FechaTextBox" SelectedDate="{Binding Fecha}" Height="30" VerticalContentAlignment="Center"/>
+            <!--——————————————————————————————————————————————[ SuplidorId ]——————————————————————————————————————————————-->
+            <Label x:Name="SuplidorIdLabel" Content="SuplidorId" FontWeight="Bold"/>
+            <ComboBox x:Name="SuplidorIdComboBox" SelectedValue="{Binding SuplidorId}" Width="100" HorizontalAlignment="Left" Height="25"/>
 
-    <!--——————————————————————————————————————————————[ DETALLE ]——————————————————————————————————————————————-->
-    <StackPanel Orientation="Vertical">
-        <GroupBox Margin="0,10,0,0">
-            <StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                    <Label Content="ProductoId"/>
-                    <ComboBox x:Name="ProductoIdComboBox" Width="100" Margin="0,0,30,0"/>
-                    <Label Content="Cantidad"/>
-                    <TextBox x:Name="CantidadTextBox" Width="100"/>
-                </StackPanel>
-                <!--——————————————————————————————————————————————[ BOTONES AGREGRAR Y ELIMINAR FILA ]——————————————————————————————————————————————-->
-                <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Right">
-                    <!--——————————————————————[ AgregarFilaButton ]——————————————————————-->
-                    <Button x:Name="AgregarFilaButton" Click="AgregarFilaButton_Click">
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="/Imagenes/Mas.png" Height="25"/>
-                            <Label Content="Agregar fila"/>
+            <!--——————————————————————————————————————————————[ DETALLE ]——————————————————————————————————————————————-->
+            <StackPanel Orientation="Vertical">
+                <GroupBox  Header="Detalle Ordenes" Margin="0,10,0,0">
+                    <StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                            <Label Content="ProductoId"/>
+                            <ComboBox x:Name="ProductoIdComboBox" Width="100" Margin="0,0,30,0"/>
+                            <Label Content="Cantidad"/>
+                            <TextBox x:Name="CantidadTextBox" Width="100"/>
                         </StackPanel>
-                    </Button>
-                    <!--——————————————————————[ RemoverFilaButton ]——————————————————————-->
-                    <Button x:Name="RemoverFilaButton" Margin="20,0,0,0" Click="RemoverFilaButton_Click">
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="/Imagenes/men.png" Height="25"/>
-                            <Label Content="Eliminar fila"/>
+                        <!--——————————————————————————————————————————————[ BOTONES AGREGRAR Y ELIMINAR FILA ]——————————————————————————————————————————————-->
+                        <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Right">
+                            <!--——————————————————————[ AgregarFilaButton ]——————————————————————-->
+                            <Button x:Name="AgregarFilaButton" Click="AgregarFilaButton_Click">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Source="/Imagenes/Mas.png" Height="25"/>
+                                    <Label Content="Agregar fila"/>
+                                </StackPanel>
+                            </Button>
+                            <!--——————————————————————[ RemoverFilaButton ]——————————————————————-->
+                            <Button x:Name="RemoverFilaButton" Margin="20,0,0,0" Click="RemoverFilaButton_Click">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Source="/Imagenes/men.png" Height="25"/>
+                                    <Label Content="Eliminar fila"/>
+                                </StackPanel>
+                            </Button>
                         </StackPanel>
-                    </Button>
-                </StackPanel>
-                <!--——————————————————————————————————————————————[ DATA GRID ]——————————————————————————————————————————————-->
-                <DataGrid x:Name="DetalleDataGrid" ItemsSource="{Binding Detalle}" Height="80" AutoGenerateColumns="False" Margin="0,10,0,0">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="ProductoId" Binding="{Binding ProductoId}"/>
-                        <DataGridTextColumn Header="Descripcion" Binding="{Binding Producto.Descripcion}"/>
-                        <DataGridTextColumn Header="Cantidad" Binding="{Binding Cantidad}"/>
-                        <DataGridTextColumn Header="Costo" Binding="{Binding Producto.Costop}"/>
-                        <DataGridTextColumn Header="Inventario" Binding="{Binding Producto.Inventario}"/>
-                    </DataGrid.Columns>
-                </DataGrid>
+                        <!--——————————————————————————————————————————————[ DATA GRID ]——————————————————————————————————————————————-->
+                        <DataGrid x:Name="DetalleDataGrid" ItemsSource="{Binding Detalle}" Height="80" AutoGenerateColumns="False" Margin="0,10,0,0">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="ProductoId" Binding="{Binding ProductoId}"/>
+                                <DataGridTextColumn Header="Descripcion" Binding="{Binding Producto.Descripcion}"/>
+                                <DataGridTextColumn Header="Cantidad" Binding="{Binding Cantidad}"/>
+                                <DataGridTextColumn Header="Costo" Binding="{Binding Producto.Costop}"/>
+                                <DataGridTextColumn Header="Inventario" Binding="{Binding Producto.Inventario}"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0" >
+                            <Label Content="Monto"/>
+                            <TextBox x:Name="MontoTextBox" Text="{Binding Monto}" Width="100" IsReadOnly="True"/>
+                        </StackPanel>
+                    </StackPanel>
+                </GroupBox>
+            </StackPanel>
+
+            <!--Total-->
+            <StackPanel Orientation= "Horizontal" Height="25" Margin="0,4,0,0" HorizontalAlignment="Left">
 
             </StackPanel>
-        </GroupBox>
-    </StackPanel>
-    <!--——————————————————————————————————————————————[ DETALLE FIN ]——————————————————————————————————————————————-->
+
+   
+        <!--——————————————————————————————————————————————[ DETALLE FIN ]——————————————————————————————————————————————-->
 
     <!--——————————————————————————————————————————————[ BOTON NUEVO ]——————————————————————————————————————————————-->
     <StackPanel Orientation="Horizontal" Height="35" Margin="0,5,0,0" HorizontalAlignment="Center">
